--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,3 +1,5 @@
 @import "tailwindcss";
 @import "./styles/theme.css";
 @import "./styles/design-system.css";
+@import "./styles/button-accessibility.css";
+@import "./styles/card-accessibility.css";
